--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,23 @@
                 </li>
 </ul>
 </div>
+<form class="subscribe-form">
+    <p class="subscribe-title">Subscribe</p>
+    <div class="subscribe-field">
+        <input class="subscribe-input" 
+        type="user-email"
+        name="user-email"
+        type="email"
+        placeholder="E-mail">
+        <button class="subscribe-btn" type="submit">Subscribe
+            <svg class="icon-send" width="24" height="20">
+                <use href="./images/sprite-3.svg#icon-send"></use>
+            </svg>
+        </button>
+    </div>
+</form>
 </div>
+
 </footer>
 <!--/Footer-->
 </body>
