--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
     <!--/Section 2-->
 <!--Section 3-->
-<section class="abilities-section">
+<section class="section abilities-section">
     <div class="container">
 <h2 class="headline">What Are We Doing </h2>
 <ul class="abilities-set">
@@ -108,7 +108,7 @@
 </section>
 <!--/Section 3-->
 <!--Section 4-->
-<section class="team-section">
+<section class=" section team-section">
     <div class="container">
 <h2 class="header-team">Our Team</h2>
 <ul class="list team-list">
@@ -261,7 +261,7 @@
 </div>
 </section>
 <!--/Section 4-->
-<section class="customers-section">
+<section class=" section customers-section">
 <div class="container">
     <h2 class="clients-headline">Customers</h2>
     <ul class="clients-list list">
@@ -353,7 +353,23 @@
                 </li>
 </ul>
 </div>
+<form class="subscribe-form">
+    <p class="subscribe-title">Subscribe</p>
+    <div class="subscribe-field">
+        <input class="subscribe-input" 
+        type="user-email"
+        name="user-email"
+        type="email"
+        placeholder="E-mail">
+        <button class="subscribe-btn" type="submit">Subscribe
+            <svg class="icon-send" width="24" height="20">
+                <use href="./images/sprite-3.svg#icon-send"></use>
+            </svg>
+        </button>
+    </div>
+</form>
 </div>
+
 </footer>
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
@@ -401,16 +417,14 @@
        <textarea class="modal-form-comment" name="user-comment" placeholder="Text input"></textarea>
        </label>
 
-       <input id="user-policy" type="checkbox" name="user-policy" class="modal-form-check visually-hidden">
        <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the &nbsp;<a href="policy">Privacy Policy</a>
+        <input id="user-policy" type="checkbox" name="user-policy" class="modal-form-check visually-hidden">
     </label>
 
       <button class="form-modal-btn btn" type="submit">Send</button>
       </form>
     </div>
     </div>
-
-    
 <!--/Footer-->
 <script src="./main.js/modal.js"></script>
 </body>
