added changes and deleted mistakes

--- a/index.html
+++ b/index.html
@@ -356,11 +356,7 @@
 <form class="subscribe-form">
     <p class="subscribe-title">Subscribe</p>
     <div class="subscribe-field">
-        <input class="subscribe-input" 
-        type="user-email"
-        name="user-email"
-        type="email"
-        placeholder="E-mail">
+        <input class="subscribe-input" type="email" name="email" placeholder="E-mail">
         <button class="subscribe-btn" type="submit">Subscribe
             <svg class="icon-send" width="24" height="20">
                 <use href="./images/sprite-3.svg#icon-send"></use>
@@ -395,7 +391,7 @@
        <label class="modal-form-field">
         <span class="modal-form-input-desc">Phone</span>
         <span class="modal-form-input-wrapper">
-        <input class="form-input" type="phone" name="phone" required>
+        <input class="form-input" type="tel" name="tel" required>
         <svg class="form-icon" width="13" height="13">
             <use href="./images/sprite-3.svg#icon-phone"></use>
         </svg>
