--- a/portfolio.html
+++ b/portfolio.html
@@ -211,10 +211,7 @@
     <p class="subscribe-title">Subscribe</p>
     <div class="subscribe-field">
         <input class="subscribe-input" 
-        type="user-email"
-        name="user-email"
-        type="email"
-        placeholder="E-mail">
+        type="email" name="email" placeholder="E-mail">
         <button class="subscribe-btn" type="submit">Subscribe
             <svg class="icon-send" width="24" height="20">
                 <use href="./images/sprite-3.svg#icon-send"></use>
